--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/" />
+    <link rel="icon" type="image/png" href="/PPSUNAACA+Logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>P P Savani University - Excellence in Education</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
